--- a/src/Mod/Material/Gui/DlgSettingsMaterial.ui
+++ b/src/Mod/Material/Gui/DlgSettingsMaterial.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>434</width>
-    <height>553</height>
+    <height>612</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,137 +17,6 @@
    <property name="spacing">
     <number>6</number>
    </property>
-   <item>
-    <widget class="QGroupBox" name="gb_4_materials">
-     <property name="title">
-      <string>Card Resources</string>
-     </property>
-     <layout class="QVBoxLayout" name="verticalLayout_2">
-      <item>
-       <layout class="QVBoxLayout" name="verticalLayout_6">
-        <item>
-         <widget class="Gui::PrefCheckBox" name="cb_use_built_in_materials">
-          <property name="toolTip">
-           <string>The cards built-in to FreeCAD will be listed as available</string>
-          </property>
-          <property name="text">
-           <string>Use built-in materials</string>
-          </property>
-          <property name="checked">
-           <bool>true</bool>
-          </property>
-          <property name="prefEntry" stdset="0">
-           <cstring>UseBuiltInMaterials</cstring>
-          </property>
-          <property name="prefPath" stdset="0">
-           <cstring>Mod/Material/Resources</cstring>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="Gui::PrefCheckBox" name="cb_use_mat_from_workbenches">
-          <property name="toolTip">
-           <string>Use materials added by external workbenches</string>
-          </property>
-          <property name="text">
-           <string>Use materials from external workbenches</string>
-          </property>
-          <property name="checked">
-           <bool>true</bool>
-          </property>
-          <property name="prefEntry" stdset="0">
-           <cstring>UseMaterialsFromWorkbenches</cstring>
-          </property>
-          <property name="prefPath" stdset="0">
-           <cstring>Mod/Material/Resources</cstring>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="Gui::PrefCheckBox" name="cb_use_mat_from_config_dir">
-          <property name="toolTip">
-           <string>Cards from FreeCAD’s preferences directory are also listed as available</string>
-          </property>
-          <property name="text">
-           <string>Use materials from the Materials preference directory</string>
-          </property>
-          <property name="checked">
-           <bool>true</bool>
-          </property>
-          <property name="prefEntry" stdset="0">
-           <cstring>UseMaterialsFromConfigDir</cstring>
-          </property>
-          <property name="prefPath" stdset="0">
-           <cstring>Mod/Material/Resources</cstring>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="Gui::PrefCheckBox" name="cb_use_mat_from_custom_dir">
-          <property name="toolTip">
-           <string>Material cards from the specified directory will also be listed as available</string>
-          </property>
-          <property name="text">
-           <string>Use materials from user-defined directory</string>
-          </property>
-          <property name="checked">
-           <bool>true</bool>
-          </property>
-          <property name="prefEntry" stdset="0">
-           <cstring>UseMaterialsFromCustomDir</cstring>
-          </property>
-          <property name="prefPath" stdset="0">
-           <cstring>Mod/Material/Resources</cstring>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <layout class="QGridLayout" name="gridLayout">
-          <item row="1" column="0">
-           <widget class="QLabel" name="l_custom_mat_dir">
-            <property name="enabled">
-             <bool>true</bool>
-            </property>
-            <property name="minimumSize">
-             <size>
-              <width>100</width>
-              <height>0</height>
-             </size>
-            </property>
-            <property name="text">
-             <string>User directory</string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="1">
-           <widget class="Gui::PrefFileChooser" name="fc_custom_mat_dir">
-            <property name="enabled">
-             <bool>true</bool>
-            </property>
-            <property name="mode">
-             <enum>Gui::FileChooser::Directory</enum>
-            </property>
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="prefEntry" stdset="0">
-             <cstring>CustomMaterialsDir</cstring>
-            </property>
-            <property name="prefPath" stdset="0">
-             <cstring>Mod/Material/Resources</cstring>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </item>
-       </layout>
-      </item>
-     </layout>
-    </widget>
-   </item>
    <item>
     <widget class="QGroupBox" name="gb_4_materials_2">
      <property name="title">
@@ -368,10 +237,10 @@ If unchecked, they will be sorted by their name.</string>
    <item>
     <spacer name="verticalSpacer">
      <property name="orientation">
-      <enum>Qt::Vertical</enum>
+      <enum>Qt::Orientation::Vertical</enum>
      </property>
      <property name="sizeType">
-      <enum>QSizePolicy::Expanding</enum>
+      <enum>QSizePolicy::Policy::Expanding</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
@@ -386,38 +255,11 @@ If unchecked, they will be sorted by their name.</string>
  <layoutdefault spacing="6" margin="11"/>
  <customwidgets>
   <customwidget>
-   <class>Gui::FileChooser</class>
-   <extends>QWidget</extends>
-   <header>Gui/FileDialog.h</header>
-  </customwidget>
-  <customwidget>
-   <class>Gui::PrefFileChooser</class>
-   <extends>Gui::FileChooser</extends>
-   <header>Gui/PrefWidgets.h</header>
-  </customwidget>
-  <customwidget>
    <class>Gui::PrefCheckBox</class>
    <extends>QCheckBox</extends>
    <header>Gui/PrefWidgets.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
- <connections>
-  <connection>
-   <sender>cb_use_mat_from_custom_dir</sender>
-   <signal>toggled(bool)</signal>
-   <receiver>fc_custom_mat_dir</receiver>
-   <slot>setEnabled(bool)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>216</x>
-     <y>87</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>316</x>
-     <y>112</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
