--- a/src/Mod/Material/Gui/Resources/Material.qrc
+++ b/src/Mod/Material/Gui/Resources/Material.qrc
@@ -6,6 +6,7 @@
         <file>icons/Material_Favorite.svg</file>
         <file>icons/Material_Inherit.svg</file>
         <file>icons/Material_Library.svg</file>
+        <file>icons/Material_Remote.svg</file>
         <file>icons/multiline.svg</file>
         <file>icons/preferences-material.svg</file>
         <file>icons/preview-rendered.svg</file>
